--- a/.github/workflows/lintercheck.yaml
+++ b/.github/workflows/lintercheck.yaml
@@ -20,7 +20,9 @@ jobs:
           key: pip-${{ hashFiles('**/requirements.txt') }}
       - name: Install requirements
         if: steps.pip-cache.outputs.cache-hit != 'true'
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Run flake8
         run: |
           echo 'Run flake8'
